[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skewproof"
version = "0.1.0"
description = "Define a feature once; the same definition serves training and inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
skewproof = "skewproof.cli:entrypoint"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
postgres = [
    "psycopg2-binary>=2.9",
]
redis = [
    "redis>=5",
]

[tool.setuptools.packages.find]
include = ["skewproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=skewproof",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["skewproof"]

[tool.coverage.report]
show_missing = true
omit = ["skewproof/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    # Protocol / interface method bodies that are never executed.
    "^\\s*\\.\\.\\.$",
]
